# veil-windows-client

./: .clang-tidy  CLAUDE.md  CMakeLists.txt  README.md  install_veil.sh
.github/workflows/: build-installer.yml  connection-test.yml  linux-build.yml  release.yml  windows-build.yml  windows-code-quality.yml
cmake/: Dependencies.cmake  ProjectOptions.cmake  Warnings.cmake
docs/: TRANSLATIONS.md  configuration.md  deployment_guide.md  protocol_wrappers.md  windows-tls-setup.md
experiments/: CMakeLists.txt  cross_platform_crypto_test.cpp  debug_variant  debug_variant.cpp  test_config_fix.sh  test_serialize.cpp  test_shortcut_creation.cpp  test_variant  test_variant.cpp
installer/: LICENSE.txt  build-installer.ps1  veil-vpn.nsi
src/: CMakeLists.txt
src/client/: main.cpp
src/gui-client/: CMakeLists.txt  app_split_tunnel_widget.cpp  collapsible_section.cpp  connection_widget.cpp  connection_widget.h  data_usage_widget.cpp  diagnostics_widget.cpp  ipc_client_manager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  notification_preferences.h  quick_actions_widget.h  server_list_widget.cpp  settings_widget.cpp  settings_widget.h  setup_wizard.cpp  setup_wizard.h  statistics_widget.cpp
src/gui-server/: client_list_widget.cpp  main.cpp  mainwindow.cpp  server_status_widget.cpp
src/server/: main.cpp  server_config.cpp  server_config.h  session_table.cpp
src/tools/: CMakeLists.txt
src/tun/: routing_linux.cpp  routing_windows.cpp  tun_device.h  tun_device_linux.cpp  tun_device_windows.cpp
src/tunnel/: tunnel.cpp  tunnel.h
src/windows/: service_main.cpp  (+6 more)
(+58 files in other folders)
